--- a/project.conf
+++ b/project.conf
@@ -8,13 +8,13 @@ EstimatedTime=04:00:00
 
 [Directories]
 Data=
-References=
+References=/Users/hedani/blah
 Output=
 Doric=
 Node=$TMPDIR
 
 [Other]
-RefName=
+RefName=bacSmall
 NrSamples=
 SamplesPerNode=5
-Email=
+Email=hedani@chalmers.se
