--- a/project.conf
+++ b/project.conf
@@ -1,22 +1,22 @@
 [Project]
-ProjectID=SNIC2015-1-450
+ProjectID=
 JobName=PTR-Pipeline
-Cluster=hebbe
+Cluster=
 JobNodes=1
 CpuCores=16
 EstimatedTime=04:00:00
 
 [Directories]
 Data=
-References=/Users/hedani/blah
+References=
 Output=
 Doric=
 Node=$TMPDIR
 
 [Other]
-RefName=bacSmall
+RefName=
 NrSamples=
 SamplesPerNode=5
-Email=hedani@chalmers.se
-FtpURL=ftp.sra.ebi.ac.uk
-DataURL=/vol1/fastq/ERR525
+Email=
+FtpURL=
+DataURL=
