--- a/project.conf
+++ b/project.conf
@@ -1,23 +1,23 @@
 [Project]
-ProjectID=
+ProjectID=SNIC2016-1-188
 JobName=PTR-Pipeline
-Cluster=
+Cluster=hebbe
 JobNodes=1
 CpuCores=16
 EstimatedTime=04:00:00
 
 [Directories]
-Data=
-References=
-Output=
-Doric=
+Data=/c3se/NOBACKUP/users/hedani/Data/ERR525
+References=/c3se/NOBACKUP/users/hedani/Data/References/NCBI/bacSmall
+Output=$SNIC_NOBACKUP/Data/bacSmallOut
+Doric=$SNIC_NOBACKUP/Data/References/DoriC
 Node=$TMPDIR
 
 [Other]
-RefName=
-NrSamples=
+RefName=bacSmall
+NrSamples=15
 SamplesPerNode=5
-Email=
-FtpURL=
-DataURL=
-StartInd=
+Email=hedani@chalmers.se
+FtpURL=ftp.sra.ebi.ac.uk
+DataURL=/vol1/fastq/ERR525
+StartInd=688
