--- a/extra/project.conf.example
+++ b/extra/project.conf.example
@@ -8,16 +8,16 @@ EstimatedTime=04:00:00
 
 [Directories]
 Data=/c3se/NOBACKUP/users/hedani/Data/ERR525
-References=/c3se/NOBACKUP/users/hedani/Data/References/NCBI/bacSmall
+References=/c3se/NOBACKUP/users/hedani/Data/References/NCBI/bacSmall2
 Output=$SNIC_NOBACKUP/Data/bacSmallOut
 Doric=$SNIC_NOBACKUP/Data/References/DoriC
 Node=$TMPDIR
 
 [Other]
 RefName=bacSmall
-NrSamples=3
+NrSamples=100
 SamplesPerNode=5
-Email=hedani@chalmers.se
+Email=user@email.com
 FtpURL=ftp.sra.ebi.ac.uk
 DataURL=/vol1/fastq/ERR525
 StartInd=688
