Chnage project.conf

--- a/project.conf
+++ b/project.conf
@@ -1,23 +1,23 @@
-[Project]
-ProjectID=SNIC2016-1-188
-JobName=PTR-Pipeline
-Cluster=hebbe
-JobNodes=1
-CpuCores=16
-EstimatedTime=04:00:00
+[Project]									; for another example see "extra/project.conf.example"
+ProjectID=SNIC2016-1-188					
+JobName=PTR-Pipeline						
+Cluster=hebbe								
+JobNodes=1									; this can be kept at 1 (we use "array" to allocate many nodes)
+CpuCores=16					
+EstimatedTime=04:00:00						
 
-[Directories]
-Data=/c3se/NOBACKUP/users/hedani/Data/ERR525
-References=/c3se/NOBACKUP/users/hedani/Data/References/NCBI/bacSmall2
-Output=$SNIC_NOBACKUP/Data/bacSmallOut
-Doric=$SNIC_NOBACKUP/Data/References/DoriC
-Node=$TMPDIR
+[Directories]								; the paths do not need to exist (they are created when running eg. "./ptr-pipeline full")
+Data=										; metagenomic data path
+References=									; top level reference path (will contain directories Fasta, Index, Headers and taxIDs.csv)
+Output=										; cluster output path
+Doric=										; path containing "bacteria_record.dat" (optional, may be left blank)
+Node=$TMPDIR								; node local directory
 
-[Other]
-RefName=bacSmall
-NrSamples=3
-SamplesPerNode=3
-Email=hedani@chalmers.se
-FtpURL=ftp.sra.ebi.ac.uk
-DataURL=/vol1/fastq/ERR525
-StartInd=688
+[Other]										
+RefName=									; the name of the bowtie2 index (can be arbitrary if not already built)
+NrSamples=									; total number of samples to download and run
+SamplesPerNode=5							; some steps run samples in parallel, set at five due to memory requirements
+Email=										; a valid email is required for downloading of references and job completion
+FtpURL=ftp.sra.ebi.ac.uk					; top level ftp URL (leave blank if data already downloaded to [Directories]->Data)
+DataURL=/vol1/fastq/ERR525					; data sub level ftp URL
+StartInd=									; cohort start index (ex. ERR525688 ... , set StartInd=688)
