--- a/project.conf
+++ b/project.conf
@@ -14,7 +14,8 @@ Doric=										; path containing "bacteria_record.dat" (optional, may be left b
 Node=$TMPDIR								; node local directory
 
 [Other]										
-RefName=									; the name of the bowtie2 index (can be arbitrary if not already built)
+Mapper=										; currently supported aligners: "bowtie2" or "gem"
+RefName=									; the name of the gem/bowtie2 index (can be arbitrary if not already built)
 NrSamples=									; total number of samples to download and run
 SamplesPerNode=5							; some steps run samples in parallel, set at five due to memory requirements
 Email=										; a valid email is required for downloading of references and job completion
