--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ pandas
 xmltodict
 lmfit
 newick
--e git+git@github.com:PathoScope/PathoScope.git#egg=pathoscope
+-e git+https://github.com/PathoScope/PathoScope.git#egg=pathoscope
