Add rep sel in buildHelper

--- a/menace/templates/project.conf
+++ b/menace/templates/project.conf
@@ -8,10 +8,10 @@ EstimatedTime={{ estimated_time }}						; (default 4 hrs)
 
 [Directories]								; the paths do not need to exist (they are created when running eg. "./menace full")
 Data={{ data_path }}										; metagenomic data path
-References={{ ref_path }}									; top level reference path (will contain directories Fasta, Index, Headers and taxIDs.csv)
+References={{ ref_path }}									; top level reference path (will contain directories Fasta, Index, Headers and taxIDs.txt)
 Output={{ output_path }}										; cluster output path
 DoriC={{ doric_path }}										; path containing "bacteria_record.dat" (optional, may be left blank)
-Node={{ node_path }}								; node local directory
+Node={{ node_path }}								; node local directory, (for cluster simply set to "$TMPDIR")
 
 [Other]										
 Mapper={{ mapper }}										; currently supported aligners: "bowtie2"
@@ -21,5 +21,5 @@ SamplesPerNode={{ samples_per_node }}							; some steps run samples in parallel
 Email={{ email }}										; a valid email is required for downloading of references and job completion
 FtpURL=									; top level ftp URL (eg. ftp.sra.ebi.ac.uk), (leave blank if data already downloaded to [Directories]->Data)
 DataURL=									; data sub level ftp URL (eg. /vol1/fastq/ERR525)
-DataPrefix=								; accession predix (eg. ERR525)
-StartInd=									; cohort start index (eq. ERR525688 ... , set StartInd=688)
+DataPrefix=								; accession prefix (eg. ERR525)
+StartInd=									; cohort start index (eg. ERR525688 ... , set StartInd=688)
