Add menace_path to proj template

--- a/menace/templates/project.conf
+++ b/menace/templates/project.conf
@@ -7,6 +7,7 @@ CpuCores={{ cpu_cores }}
 EstimatedTime={{ estimated_time }}							; (default 4 hrs)
 
 [Directories]												; the paths do not need to exist (they are created when running eg. "./menace full")
+Menace={{ menace_path }}
 Data={{ data_path }}										; metagenomic data path
 References={{ ref_path }}									; top level reference path (will contain directories Fasta, Index, Headers and taxIDs.txt)
 Output={{ output_path }}									; cluster output path
