Add pathoscope zertan conda recipy

--- a/menace/templates/project.conf
+++ b/menace/templates/project.conf
@@ -15,6 +15,7 @@ DoriC={{ doric_path }}										; path containing "bacteria_record.dat" (optiona
 Node={{ node_path }}										; node local directory, (for cluster simply set to "$TMPDIR")
 
 [Other]										
+CondaEnv={{ conda_env }}									; the conda environment menace is installed to, default 'menace'
 Mapper={{ mapper }}											; currently supported aligners: "bowtie2"
 RefName={{ ref_name }}										; the name of the bowtie2 index (can be arbitrary if not already built)
 NrSamples={{ nr_samples }}									; total number of samples to download and run
