--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,12 @@ language: python
 
 python:
   # We don't actually use the Travis Python, but this keeps it organized.
-  - "2.6"
+  #- "2.6"
   - "2.7"
 
 os:
   - linux
-  - osx
+  #- osx
 
 install:
   - sudo apt-get update
