--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,10 @@ install:
   - conda update -q conda
   # Useful for debugging any issues with conda
   - conda info -a
-
+  - conda install conda-build anaconda-client
+  
   # Replace dep1 dep2 ... with your dependencies
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION conda-build
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
   - source activate test-environment
   - conda build menace
   - conda install menace --use-local
