--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,11 @@ install:
   # Useful for debugging any issues with conda
   - conda info -a
   - conda install conda-build anaconda-client
-  
+
+  - conda config --add channels conda-forge
+  - conda config --add channels bioconda
+  - conda config --add channels zertan
+
   # Replace dep1 dep2 ... with your dependencies
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
   - source activate test-environment
