--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,7 @@ os:
   - osx
 
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-      brew update
-      export CONDA_OS=MacOSX
-    elif [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-      sudo apt-get update
-      export CONDA_OS=Linux
-    fi
+  - bash script/conda_preinstall.sh
 
 install:
   - bash script/conda_build.sh
