--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
       env: TOXENV=py27
 
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update && export CONDA_OS=MacOSX; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update && export CONDA_OS=MacOSX && export TRAVIS_PYTHON_VERSION=2.7; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update && export CONDA_OS=Linux; fi
 
 install:
