--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ install:
   - conda install -f --use-local -y menace
 
 script:
-  - mkdir menace_test && cd menace_test && menace -e hedani@chalmers.se test && cd ..
+  #- mkdir menace_test && cd menace_test && menace -e hedani@chalmers.se test && cd ..
 
 after_success:
   - export PKG_NAME=menace
