--- a/recipe/menace/meta.yaml
+++ b/recipe/menace/meta.yaml
@@ -78,7 +78,7 @@ test:
 
     - menace --help
     - fetch_seq --help
-    #- mkdir m_test && cd m_test && menace -e hedani@chalmers.se test
+    - mkdir m_test && cd m_test && menace -e hedani@chalmers.se test
 
   # You can also put a file called run_test.py in the recipe that will be run
   # at test time.
