--- a/.travis.yml
+++ b/.travis.yml
@@ -34,13 +34,13 @@ install:
   - conda config --add channels bioconda
   - conda config --add channels zertan
 
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
-  - source activate test-environment
+  - conda create -q -n menace python=$TRAVIS_PYTHON_VERSION
+  - source activate menace
   - conda build recipe/menace
   #- conda install -f --use-local -y menace
 
-#script:
-#  pass
+script:
+  - echo "pass"
   #- mkdir menace_test && cd menace_test && menace -e hedani@chalmers.se test && cd ..
 
 after_success:
