--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,6 @@ script:
 after_success:
   - export PKG_NAME=menace
   - export OS=$TRAVIS_OS_NAME-64
-  - export CONDA_BLD_PATH=~/conda-bld
+  - export CONDA_BLD_PATH=/home/travis/miniconda/conda-bld
   - export VERSION=`python -c "exec(\"execfile('menace/version.py')\nprint __version__\")"`
   - anaconda -t $CONDA_UPLOAD_TOKEN upload -u $USER $CONDA_BLD_PATH/$OS/$PKG_NAME-$VERSION-py27_0.tar.bz2 --force
